--- a/Test/test.html
+++ b/Test/test.html
@@ -178,6 +178,39 @@
     // let person2 = new Person("Sơn", 55, 1.6)
     // alert(person2.getName())
     //
+
+    //B1: số chia hết cho 2: number % 2 === 0
+    //B2: số lần lặp: 5
+
+    // let number = 0;
+    // for (let i = 0; i <  5;) {
+    //     if (number % 2 === 0) {
+    //         document.write(number + "<br>")
+    //         i++
+    //     }
+    //     number++
+    // }
+    //
+    // let i = 0
+    // let number1 = 0
+    // while (i < 5) {
+    //     if (number1 % 2 === 0) {
+    //         document.write(number1 + "<br>")
+    //         i++
+    //     }
+    //     number1++
+    // }
+
+    // for (let i = 0; i < 100; i++) {
+    //     document.write(i + "<br>")
+    // }
+    //
+    // let i = 0;
+    // while (i < 5) {
+    //     document.write(i + "<br>")
+    //     i++
+    // }
+
 </script>
 </body>
 </html>
