update sáng ngày 23/09/2021

--- a/Câu lệnh IF 2/good-fast-cheap.html
+++ b/Câu lệnh IF 2/good-fast-cheap.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<label for="good"></label><input type="checkbox" id="good" onchange="checkGood()">Good
-<label for="fast"></label><input type="checkbox" id="fast" onchange="checkFast()">Fast
-<label for="cheap"></label><input type="checkbox" id="cheap" onchange="checkCheap()">Cheap
+<label for="good"><input type="checkbox" id="good" onchange="checkGood()">Good</label>
+<label for="fast"><input type="checkbox" id="fast" onchange="checkFast()">Fast</label>
+<label for="cheap"><input type="checkbox" id="cheap" onchange="checkCheap()">Cheap</label>
 <script>
     function checkGood() {
         let cheap = document.getElementById("cheap").checked;
