--- a/Form/formdongian-sothich.html
+++ b/Form/formdongian-sothich.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form>
-    <fieldset style="background-color: #2196F3">
+    <fieldset style="background-color: #2196F3; width: 410px">
         <table style="width: 400px; height: 80px; background-color: white">
             <tr>
                 <th colspan="4" bgcolor="red"><span style="color: white">SỞ THÍCH CỦA BẠN</span></th>
