--- a/Mảng 1/carosimple.html
+++ b/Mảng 1/carosimple.html
@@ -33,12 +33,14 @@
         for (let i = 0; i < 5; i++) {
             data += "<br/>";
             for (let j = 0; j < 5; j++) {
-                data += board[i][j] + "&nbsp;&nbsp;&nbsp;&nbsp;";
+                data += board[i][j] + "&emsp;";
             }
         }
         data += "<br/><br/><input type='button' value='Change Value' onclick='changeValue()'>"
         b.innerHTML = "<hr/>" + data;
     }
+
+    let a = "tôi là đồ ngốc hihi"
 </script>
 </body>
 </html>
