--- a/Vòng lặp 2/Luyện tập 1/gamedoanso.html
+++ b/Vòng lặp 2/Luyện tập 1/gamedoanso.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <input type="button" name="button" value="Chơi" onclick="guessTheNumber()">
+Công thức random: Math.random()*(số lớn - số nhỏ) + số nhỏ
 </body>
 </html>
