--- a/Vòng lặp 2/Luyện tập 2/bai1.html
+++ b/Vòng lặp 2/Luyện tập 2/bai1.html
@@ -6,15 +6,28 @@
 </head>
 <body>
 <script>
+    //Dãy Fibo: 1 1 2 3 5 8
     let a = 0;
     let b = 1;
-    let count = +prompt("Nhập vào số lượng số cần hiển thị: ")
-    document.write("Những số cần tìm là: ")
-    for (let i = 1; i <= count; i++) {
-        c = a + b
+    // let count = +prompt("Nhập vào số lượng số cần hiển thị: ")
+    // document.write("Những số cần tìm là: ")
+    // for (let i = 1; i < count; i++) {
+    //     document.write(b + ", ")
+    //     let c = a + b
+    //     a = b
+    //     b = c
+    // }
+
+    //in ra 20 số đầu tiền trong dãy Fibo chia hết cho 5
+    let count = 0
+    while (count < 20) {
+        if (b % 5 === 0) {
+            document.write(b + "<br>")
+            count++
+        }
+        let c = a + b
         a = b
         b = c
-        document.write(c + ", ")
     }
 </script>
 </body>
