--- a/Hàm 1/chuyendoinhietdo.html
+++ b/Hàm 1/chuyendoinhietdo.html
@@ -10,5 +10,8 @@
 <h3>Type a value in the Fahrenheit field to convert the value to Celcius:</h3>
 <p>Fahrenheit</p><label for="input"></label><input type="number" id="input" name="" size="30" oninput="result()"><br>
 <p>Celsius</p><span id="output"></span>
+
+
+//CRUD: Create - Update - Read - Delete
 </body>
 </html>
